--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
-    "@types/inquirer": "^6.5.0",
-    "@types/node": "^14.0.5",
+    "chalk": "^4.0.0",
     "clear": "^0.1.0",
+    "figlet": "^1.4.0",
     "inquirer": "^7.1.0",
     "typescript": "^3.9.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/clear": "^0.1.0",
+    "@types/figlet": "^1.2.0",
+    "@types/inquirer": "^6.5.0",
+    "@types/node": "^14.0.5"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "start": "tsc && node main.js"
+    "start": "tsc && node dist/main.js"
   },
   "author": "kowalevski",
   "license": "ISC"
